Bug 531245 - Import from Apple Mail.app breaks messages and causes data loss; r=Standard8